# sekretbarilo

./: .gitignore  .sekretbarilo.toml  Cargo.toml  LICENSE  README.md  cliff.toml
.github/: dependabot.yml  secret_scanning.yml
.github/workflows/: ci.yml  release.yml
benches/: scan_benchmark.rs
docs/: _config.yml  index.md
docs/_layouts/: default.html
docs/_pages/: agent-hooks.md  architecture.md  cli-reference.md  configuration.md  examples.md  getting-started.md  installation.md  performance.md  rules-reference.md
docs/assets/css/: style.css
src/: lib.rs  main.rs
src/agent/: mod.rs
src/audit/: history.rs  mod.rs  search.rs
src/config/: allowlist.rs  discovery.rs  merge.rs  mod.rs  rules.toml
src/diff/: mod.rs  parser.rs
src/doctor/: mod.rs
src/hook/: mod.rs
src/output/: masking.rs  mod.rs
src/scanner/: engine.rs  entropy.rs  hash_detect.rs  mod.rs  password.rs  pubkey.rs  rules.rs
tests/: agent_hook_tests.rs  audit_tests.rs  cli_override_tests.rs  config_merge_tests.rs  doctor_tests.rs  false_positive_tests.rs  integration_tests.rs  pubkey_tests.rs  scanner_tests.rs  search_tests.rs
