[package]
name = "sekretbarilo"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust git pre-commit secret scanner"
license = "MIT"

[dependencies]
aho-corasick = "1.1"
regex = "1.11"
memchr = "2.8"
bstr = "1.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scan_benchmark"
harness = false
