[package]
name = "sekretbarilo"
version = "0.2.0"
edition = "2021"
description = "High-performance secret scanner for git commits, working trees, and repository history"
license = "MIT"

[dependencies]
aho-corasick = "1.1"
regex = "1.11"
memchr = "2.8"
bstr = "1.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rayon = "1.10"
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
serial_test = "3"

[[bench]]
name = "scan_benchmark"
harness = false
