[package]
name = "sekretbarilo"
version = "0.2.3"
edition = "2021"
description = "High-performance secret scanner for git workflows and AI coding agents"
license = "MIT"

[dependencies]
aho-corasick = "1.1"
regex = "1.11"
memchr = "2.8"
bstr = "1.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rayon = "1.10"
serde_json = "1.0"
getargs = "0.5"
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
serial_test = "3"

[[bench]]
name = "scan_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.deb]
maintainer = "Valentin Shuraeff <vshuraeff@users.noreply.github.com>"
section = "devel"
priority = "optional"
depends = "git"
extended-description = """\
High-performance secret scanner for git workflows \
and AI coding agents. Catches API keys, credentials, \
and secrets before they leak."""
